--- a/modules/themes/alucard/config/firefox/userChrome.css
+++ b/modules/themes/alucard/config/firefox/userChrome.css
@@ -4,15 +4,17 @@
                url(chrome://browser/content/browser.xhtml)
 {
   /*** TAB BAR ***/
+ /*
   :root {
     --tab-min-height: 32px !important;
   }
-
+*/
   /* Hide tabbar if only one tab */
-  @import url(./css/tabs-hide-if-only-one.css);
+  
+  /* @import url(./css/tabs-hide-if-only-one.css);
 
   /* Hide the close button */
-  .tabbrowser-tab .tab-close-button { display: none !important; }
+ /* .tabbrowser-tab .tab-close-button { display: none !important; }
 
   /* Replace favicon on tabs with close button on mouse hover */
   /* .tabbrowser-tab .tab-close-button { -moz-box-ordinal-group: 0 !important; } */
@@ -21,13 +23,13 @@
   /* .tabbrowser-tab:not([pinned]):hover .tab-close-button { display: block !important; } */
 
   /* Hide the "all tabs" button */
-  #wrapper-alltabs-button { display: none !important; }
+/*  #wrapper-alltabs-button { display: none !important; }
   /* Hide the search engine suggestions at bottom of completion window */
-  #urlbar .urlbarView .search-one-offs { display: none !important; }
-
+  /* #urlbar .urlbarView .search-one-offs { display: none !important; }
 
   /*** NAV BAR ***/
   /* Hide urlbar */
+  /*
   #nav-bar:not([customizing=true]) {
     position: relative !important;
     z-index: 2 !important;
@@ -37,8 +39,9 @@
     opacity: 0 !important;
     border: none !important;
   }
-
+*/
   /* ...but unfocus it when we invoke it with ctrl+L */
+  /*
   #nav-bar:focus-within {
     height: auto !important;
     margin-bottom: 0px !important;
@@ -57,7 +60,7 @@
   #urlbar-input-container {
     height: 28px !important;
   }
-
+/
   /*** Load local overrides ***/
   @import url(./userChrome.local.css);
 }
