--- a/config/river/waybar/style.css
+++ b/config/river/waybar/style.css
@@ -24,6 +24,7 @@
   margin-left: 3px;
   margin-right: 7px;
   padding: 0 10px;
+  font-family: "JetBrains Mono Nerd Font", "Font Awesome 6 Free";
   background: #F47F79;
   border-radius: 0px;
 }
@@ -63,7 +64,7 @@ window#waybar {
 }
 
 #pulseaudio {
-  font-family: "Font Awesome 6 Free, Font Awesome 5 Free";
+  font-family: "Font Awesome 6 Free";
   font-weight: bold;
 }
 
