feat: fix in config location for hypr

--- a/config/hypr/config/eww/eww.scss
+++ b/config/hypr/config/eww/eww.scss
@@ -19,8 +19,8 @@ $common-padding: 20 - $common-margin;
 }
 
 window {
-  background: linear-gradient(to bottom, #7B36D8, #DB3AA7);
   border-radius: 5px;
+  background: linear-gradient(to bottom, #2A33FF, #FF3B99);
 }
 
 .tags {
