feat: start making new bar for hypr

--- a/config/hypr/config/eww/eww.scss
+++ b/config/hypr/config/eww/eww.scss
@@ -1,164 +1,11 @@
-// Colors
-
-$primary-color: #DFC5FE;
-$secondary-color: #967bb6;
-
-$font-color: white;
-$font-color-active: $primary-color;
-$font-color-occupied: $secondary-color;
-
-$color-background: #161616;
-$color-background-alt: lighten($color-background, 5);
-
-
-// Styling
-$common-margin: 5px;
-$common-margin-bottom: 2.5px;
-
-$common-radius: 5px;
-
-// 20 in here is the size of the bar
-$common-padding: 20 - $common-margin;
-
-* {
-  all: unset;
-}
-
-window {
-  color: $font-color;
-  border-radius: 10px;
-  background-color: $color-background;
-}
-
-.workspace-btn {
-  font-size: 20px;
-  margin-top: 5px;
-  margin-bottom: 5px;
-
-  color: $font-color;
-  border-radius: 999;
-  background-color: inherit;
-
-  & :first-child {
-    margin-top: 0px;
-  }
-
-  &:last-child {
-    margin-bottom: 5px;
-  }
-
-
-  &__occupied {
-    color: $font-color-occupied;
-  }
-
-  &__empty {
-    color: darken($font-color, 50);
-  }
-
-  &__active {
-    color: $font-color-active;
-  }
-
-}
-
-
-
-
-.segment {
-  border-radius: 10px;
-  padding: 10px;
-
-  color: $font-color;
-  background-color: $color-background;
-
-  margin-bottom: 5px;
-  margin-top: 10px;
-
-  &__top {
-    @extend .segment;
-    margin-top: 0px;
-    margin-bottom: 0px;
-
-    padding-top: 0px;
-    padding-bottom: 0px;
-  }
-
-  &__center {
-    @extend .segment;
-  }
-
-  &__bottom {
-    @extend .segment;
-    background-color: #967bb6;
-
-    padding-top: 0px;
-    padding-bottom: 0px;
-
-    margin-top: 0px;
-    margin-bottom: 0px;
-  }
-}
-
-.tags {
-  padding: 20px;
-  border-radius: $common-radius;
-  background-color: $color-background-alt;
-}
-
-.card {
-  color: $font-color;
-  background-color: $color-background-alt;
-
-  font-size: 16px;
-  font-weight: bolder;
-
-  padding: 10px;
-  border-radius: 5px;
-
-  margin-top: 2px;
-  margin-bottom: 2px;
-
-  &__launcher {
-    margin-top: 10px;
-    margin-bottom: 10px;
-
-    &__icon {
-      font-size: 16px;
-      font-weight: bolder;
-
-      color: $primary-color;
-
-      border-radius: 999px;
-      border: 2px solid $secondary-color;
-    }
-  }
-
-  &__time {
-    @extend .card;
-  }
-
-  &__date {
-    @extend .card;
-  }
-
-  &__icon {
-    @extend .card;
-
-    margin-top: 2px;
-    margin-bottom: 2px;
-    border: 0px;
-    border-radius: 0px;
-
-    &:first-child {
-      border-top-left-radius: $common-radius;
-      border-top-right-radius: $common-radius;
-    }
-
-    &:last-child {
-      border-bottom-left-radius: $common-radius;
-      border-bottom-right-radius: $common-radius;
-    }
-  }
-
-}
+// Theming
+@import "./scss/colors.scss";
+@import "./scss/common.scss";
+@import "./scss/variables.scss";
+// Widgets
+@import "./scss/widgets/panel_launcher.scss";
+@import "./scss/widgets/panel_workspace.scss";
+@import "./scss/widgets/panel_info.scss";
+@import "./scss/widgets/panel_powermenu.scss";
+// Windows
+@import "./scss/windows/vbar.scss";
