--- a/config/hypr/config/eww/scss/colors.scss
+++ b/config/hypr/config/eww/scss/colors.scss
@@ -1,9 +1,11 @@
-// Bar colors
-$primary-color: #DFC5FE;
-$secondary-color: #967bb6;
+// $primary-color: #78a9ff;
+// $primary-color: #8AB4F7; 
 
-$background-primary: #202023;
-$background-secondary: #303033;
+$primary-color: #82CFFF;
+$secondary-color: $primary-color;
+
+$background-primary: #202124;
+$background-secondary: #2E2F32;
 
 // Font colors
 $foreground-primary: $primary-color;
