--- a/config/hypr/config/eww/scss/common.scss
+++ b/config/hypr/config/eww/scss/common.scss
@@ -3,23 +3,17 @@
 }
 
 @mixin panel {
+    padding: 10px;
+    border-radius: 5px;
     color: $foreground-secondary;
     background-color: $background-secondary;
-
-    padding: 5px;
-    margin: 5px;
-    border-radius: $theme-radius;
 }
 
-@mixin button {
-    padding: 5px;
 
+@mixin button {
     font-size: 18px;
     font-weight: bolder;
     border-radius: $theme-radius;
-
-    color: $foreground-secondary;
-    background-color: $background-secondary;
 
     transition: all;
     transition-delay: 100ms;
@@ -29,4 +23,17 @@
         color: $foreground-primary;
         background-color: transparentize($background-primary, 0.5);
     }
+}
+
+// Will be used in various parts of the code.
+.panel {
+    @include panel;
+}
+
+.button {
+    @include button;
+}
+
+.padding-0 {
+    padding: 0;
 }
