--- a/config/hypr/config/eww/scss/variables.scss
+++ b/config/hypr/config/eww/scss/variables.scss
@@ -1,5 +1,10 @@
 // Styling
+
+// Margins
 $theme-margin: 5px;
 $theme-margin-bottom: 2.5px;
 
+// Radius
+// Should be used as a x, y, b and t value.
+// Can also be considered as the radius as one the sides, considering the module.
 $theme-radius: 5px;
