--- a/config/hypr/config/eww/scss/windows/vbar.scss
+++ b/config/hypr/config/eww/scss/windows/vbar.scss
@@ -1,6 +1,4 @@
 .vbar {
-    border-radius: $theme-radius;
-
-    color: $foreground-primary;
-    background-color: $background-primary;
+    margin: 0;
+    padding: 0;
 }
